Stop UI from getting too big and adding images to draggables

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -41,7 +41,7 @@ main {
   grid-template-areas:
     "header header"
     "grid sidebar";
-  width: 80%;
+  max-width: 800px;
   gap: 20px;
   margin: 0 auto;
 }
@@ -95,4 +95,13 @@ main {
   background-color: rgba(0,0,0,0.5);
   border: 2px solid rgba(255,255,255,0.5);
   border-radius: 10px;
+}
+
+.ship-data {
+  background-image: url('../assets/images/battleship.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 90%;
+  height: 50px;;
+  filter: invert(100%);
 }
